k8s-overcloud/samples/wp-litespeed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lts-pod
spec:
 containers:
    - name: litespeed
      image: 23251826/wp-lts:k8s
      imagePullPolicy: Always
