k8s-overcloud/samples/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: host-based-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
  
  
spec:
  rules:
  - host: "domain.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-service
            port:
              number: 80

  - host: "www.domain.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: lts-service
            port:
              number: 80




# this one is based on page, not host, might not work:
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
  
    kubernetes.io/ingress.class: nginx
    #    nginx.ingress.kubernetes.io/configuration-snippet: |
    # proxy_set_header Host 34.120.27.185/lts;
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Location http://34.120.27.185/lts;
      proxy_set_header Host $host;


  
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: test-service
            port:
              number: 80
      - path: /lts(/|$)(.*)
        pathType: Prefix
        backend:
           service:
             name: lts-service
             port:
               number: 80
apiVersion: v1
kind: Service
metadata:
  name: test-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: hello-kubernetes
---
apiVersion: v1
kind: Service
metadata:
  name: lts-service
spec:
  type: LoadBalancer
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: litespeed


# just hello-world app
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-kubernetes
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hello-kubernetes
  template:
    metadata:
      labels:
        app: hello-kubernetes
    spec:
      containers:
      - name: hello-kubernetes
        image: paulbouwer/hello-kubernetes:1.8
        ports:
        - containerPort: 8080
